refacor : 통합파일 수정